implemented project details page, added breadcrumps for projects, incorporated the new schema changes for projects, tasks, employees, departments

--- a/src/app/features/departments/components/department-list/department-list.component.html
+++ b/src/app/features/departments/components/department-list/department-list.component.html
@@ -1,2 +1,6 @@
-<app-table [inputData]="departments"
-           [tableConfig]="departmentTableConfig"></app-table>
+<div class="container">
+  <app-table 
+    [inputData]="tableData" 
+    [tableConfig]="tableConfig">
+  </app-table>
+</div>
