--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -13,6 +13,8 @@
                             routerLinkActive="active">Employees</a></li>
                     <li><a routerLink="/departments"
                             routerLinkActive="active">Departments</a></li>
+                    <li><a routerLink="/projects"
+                            routerLinkActive="active">Projects</a></li>
                </ul>
                <div mat-icon-button
                     class="profile-icon"
