--- a/src/app/features/employees/components/employee-list/employee-list.component.html
+++ b/src/app/features/employees/components/employee-list/employee-list.component.html
@@ -1,2 +1,6 @@
-<app-table [inputData]="employees"
-           [tableConfig]="employeeListConfig"></app-table>
+<div class="container">
+  <app-table 
+    [inputData]="tableData" 
+    [tableConfig]="tableConfig">
+  </app-table>
+</div>
