--- a/src/app/features/projects/components/project-list/project-list.component.html
+++ b/src/app/features/projects/components/project-list/project-list.component.html
@@ -1,4 +1,3 @@
-<div class="project-list-container">
-  <h2>Projects</h2>
-  <p>Project list will be displayed here.</p>
+<div class="container">
+  <app-table [inputData]="tableData" [tableConfig]="tableConfig" [linkClickHandler]="onProjectNameClick"></app-table>
 </div> 
